Users list layout and item layout.
Added resources for user list and list item.

--- a/GithubUsers/app/src/main/res/values/strings.xml
+++ b/GithubUsers/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Github Users</string>
+    <string name="user_image_description">Github user image.</string>
+    <string name="loading_users">Loading users…</string>
 </resources>
