Remote error handling for users list.
Error handling of remote errors while loading users list.

--- a/GithubUsers/app/src/main/res/values/strings.xml
+++ b/GithubUsers/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="following">following</string>
     <string name="repositories">Repositories</string>
     <string name="error_loading_profile">Cannot load user profile information.</string>
+    <string name="error_loading_users_swipe">Cannot load users list please swipe up to retry.</string>
+    <string name="error_loading_users_retry">Cannot load users list please retry.</string>
+    <string name="retry">Tap to retry.</string>
 </resources>
